# score-addon-trackingprotocols

./: .gitmodules  CMakeLists.txt  addon.json  build.sh  score_addon_trackingprotocols.cpp  score_addon_trackingprotocols.hpp
Common/: TrackingSlotManager.hpp  TrackingTreeBuilder.hpp  TrackingTypes.hpp
OpenTrackIO/: OpenTrackIODevice.cpp  OpenTrackIODevice.hpp  OpenTrackIOProtocol.cpp  OpenTrackIOProtocol.hpp  OpenTrackIOProtocolFactory.cpp  OpenTrackIOProtocolFactory.hpp  OpenTrackIOProtocolSettingsWidget.cpp  OpenTrackIOProtocolSettingsWidget.hpp  OpenTrackIOSpecificSettings.hpp  OpenTrackIOSpecificSettingsSerialization.cpp
OpenXR/: OpenXRDevice.hpp  OpenXRProtocol.cpp  OpenXRProtocol.hpp  OpenXRProtocolFactory.cpp  OpenXRProtocolFactory.hpp  OpenXRProtocolSettingsWidget.cpp  OpenXRProtocolSettingsWidget.hpp  OpenXRSpecificSettings.hpp  OpenXRSpecificSettingsSerialization.cpp
PSN/: PSNDevice.cpp  PSNDevice.hpp  PSNProtocol.cpp  PSNProtocol.hpp  PSNProtocolFactory.cpp  PSNProtocolFactory.hpp  PSNProtocolSettingsWidget.cpp  PSNProtocolSettingsWidget.hpp  PSNSpecificSettings.hpp  PSNSpecificSettingsSerialization.cpp
RTTrP/: RTTrPDevice.cpp  RTTrPDevice.hpp  RTTrPProtocol.cpp  RTTrPProtocol.hpp  RTTrPProtocolFactory.cpp  RTTrPProtocolFactory.hpp  RTTrPProtocolSettingsWidget.cpp  RTTrPProtocolSettingsWidget.hpp  RTTrPSpecificSettings.hpp  RTTrPSpecificSettingsSerialization.cpp
TUIO/: TUIO2Handlers.cpp  TUIO2Types.hpp  TUIODevice.cpp  TUIODevice.hpp  TUIOProtocol.cpp  TUIOProtocol.hpp  TUIOProtocolFactory.cpp  TUIOProtocolFactory.hpp  TUIOProtocolSettingsWidget.cpp  TUIOProtocolSettingsWidget.hpp  TUIOSpecificSettings.hpp  TUIOSpecificSettingsSerialization.cpp
